--- a/org.scala-ide.sdt.core.tests/test-workspace/builder/.classpath
+++ b/org.scala-ide.sdt.core.tests/test-workspace/builder/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/builder"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/builder-sub"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
