--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -9,7 +9,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <sbt.version>0.11.4</sbt.version>
+    <sbt.version>0.11.2-scalaide-01</sbt.version>
     <patch.level>p0002</patch.level>
     <encoding>UTF-8</encoding>
     <scala.library.version>${scala.version}</scala.library.version>
