--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -12,12 +12,12 @@
     <version.tag>nightly</version.tag>
     <version.suffix>2_10</version.suffix>
     <scala.version.short>2.10</scala.version.short>
-    <sbt.version>0.11.4</sbt.version>
     <tycho.version>0.12.0</tycho.version>
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
     <encoding>UTF-8</encoding>
     <repo.scala-ide>http://download.scala-ide.org</repo.scala-ide>
+    <repo.toolchain>${repo.scala-ide}</repo.toolchain>
     <repo.indigo>http://download.eclipse.org/releases/indigo/</repo.indigo>
     <repo.ajdt>http://download.eclipse.org/tools/ajdt/37/update</repo.ajdt>
   </properties>
@@ -355,23 +355,23 @@
       <properties>
         <version.suffix>2_10</version.suffix>
       </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.scala-ide</groupId>
-          <artifactId>org.scala-ide.scala.library</artifactId>
-          <version>${scala.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.scala-ide</groupId>
-          <artifactId>org.scala-ide.scala.compiler</artifactId>
-          <version>${scala.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.scala-ide</groupId>
-          <artifactId>org.scala-ide.sbt.full.library</artifactId>
-          <version>[${sbt.version}.${version.suffix},)</version>
-        </dependency>
-      </dependencies>
+      <!-- <dependencies> -->
+      <!--   <dependency> -->
+      <!--     <groupId>org.scala-ide</groupId> -->
+      <!--     <artifactId>org.scala-ide.scala.library</artifactId> -->
+      <!--     <version>${scala.version}</version> -->
+      <!--   </dependency> -->
+      <!--   <dependency> -->
+      <!--     <groupId>org.scala-ide</groupId> -->
+      <!--     <artifactId>org.scala-ide.scala.compiler</artifactId> -->
+      <!--     <version>${scala.version}</version> -->
+      <!--   </dependency> -->
+      <!--   <dependency> -->
+      <!--     <groupId>org.scala-ide</groupId> -->
+      <!--     <artifactId>org.scala-ide.sbt.full.library</artifactId> -->
+      <!--     <version>[${sbt.version},)</version> -->
+      <!--   </dependency> -->
+      <!-- </dependencies> -->
       <repositories>
         <repository>
           <id>scala-refactoring-trunk</id>
@@ -386,6 +386,12 @@
           <name>Scalariform Scala trunk p2 repo</name>
           <layout>p2</layout>
           <url>${repo.scala-ide}/scalariform-trunk</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-trunk</id>
+          <name>Scala Toolchain trunk p2 repository</name>
+          <layout>p2</layout>
+          <url>${repo.toolchain}/scala-eclipse-toolchain-osgi-trunk</url>
         </repository>
       </repositories>
     </profile>
