Improved logging infrastructure and plugged Log4J in the scala-ide.sdt.core project.
We used to have too many alternatives to create log items (Eclipse Log
framework, our ad-hoc naive internal Logger and println statements originating
from scalac). In short, we did not have an ideal logging infrastructure.

Now, I plugged Log4J as the backend logger (I'll refer to it as the "default
logger" in the rest of this commit message), which replaces our naive ad-hoc
Logger. Further, all log events occurring in the Eclipse Log Framework are now
*forwarded* to the default logger. Also, the Standard Output and Standard Error
are *redirected* to the default logger.  Naturally, the idea is to have a
single place to consult the log, and that is now the *scala-ide.log* file that
is produced by the default logger, located in

  ${workspace}/.metadata/.plugin/org.scala-ide.sdt.core/

It's easy to consult the log from within Eclipse, just click on the menu bar
Scala > Report a Bug, and the opened popup has a link that should open the
*scala-ide.log* file in the editor (though, mind that it is not automatically
refreshed while it's open).

You can also control the amount of produced log, i.e., you can set the log
level to accomodate your preferences (the default level is WARNING).  To change
it, click on the menu bar Scala > Run Setup Diagnostic and you should see a
"Logging" box. There, you can change the log level and you can also enable a
console appender to print all produced log items in the console.

To get a handle on the loggers you simply need to mix-in the HasLogger trait,
which contains a reference to both the default logger and the Eclipse Log. You
may wonder why we have two loggers. The reason is simple, if you want to
communicate a message to the user, you should use the Eclipse Log. This becayse
messages sent to the Eclipse Log are shown in the Eclipse Log View (remember
that all messages sent to the Eclipse Log are also forwarded to the default
logger, so you don't nee

--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -11,19 +11,43 @@
   <artifactId>org.scala-ide.sdt.core</artifactId>
   <packaging>eclipse-plugin</packaging>
 
+  <properties>
+    <miglayout.version>3.7.4</miglayout.version>
+    <log4j.version>1.2.16</log4j.version>
+  </properties>
+
   <dependencies>
     <dependency>
     	<groupId>com.miglayout</groupId>
     	<artifactId>miglayout</artifactId>
-    	<version>3.7.4</version>
+    	<version>${miglayout.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
-    <!-- <dependency> -->
-    <!--   <groupId>org.scala-ide</groupId> -->
-    <!--   <artifactId>org.scala-ide.sbt.full.library</artifactId> -->
-    <!--   <version>${sbt.version}.${version.suffix}</version> -->
-    <!-- </dependency> -->
+    <dependency>
+	  <groupId>log4j</groupId>
+	  <artifactId>log4j</artifactId>
+	  <version>${log4j.version}</version>
+	  <scope>compile</scope>
+	  <exclusions>
+        <exclusion>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.jms</groupId>
+          <artifactId>jms</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.jdmk</groupId>
+          <artifactId>jmxtools</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.jmx</groupId>
+          <artifactId>jmxri</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <build>
@@ -65,14 +89,74 @@
           </jvmArgs>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.4.1</version>
+        <configuration>
+          <excludeDefaultDirectories>true</excludeDefaultDirectories>
+          <filesets>
+            <fileset>
+              <directory>./</directory>
+              <includes>
+                <include>lib/**/*</include>
+                <include>lib</include>
+                <include>target/**/*</include>
+                <include>target</include>
+              </includes>
+              <followSymlinks>false</followSymlinks>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+        <execution>
+            <id>copy</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                  <version>${log4j.version}</version>
+                  <outputDirectory>${basedir}/lib</outputDirectory>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                  <version>${log4j.version}</version>
+                  <outputDirectory>${basedir}/lib</outputDirectory>
+                  <classifier>sources</classifier>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>com.miglayout</groupId>
+                  <artifactId>miglayout</artifactId>
+                  <version>${miglayout.version}</version>
+                  <outputDirectory>${basedir}/lib</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
-<!--
-    <resources>
-      <resource>
-        <directory>src/resources</directory>
-        <filtering>true</filtering>
-        <targetPath>${basedir}/META-INF</targetPath>
-      </resource>
-    </resources> -->
   </build>
 </project>
