Build against juno P2 repo

--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -18,7 +18,7 @@
     <encoding>UTF-8</encoding>
     <repo.scala-ide>http://download.scala-ide.org</repo.scala-ide>
     <repo.toolchain>${repo.scala-ide}</repo.toolchain>
-    <repo.indigo>http://download.eclipse.org/releases/indigo/</repo.indigo>
+    <repo.juno>http://download.eclipse.org/releases/juno/</repo.juno>
     <repo.ajdt>http://download.eclipse.org/tools/ajdt/37/update</repo.ajdt>
   </properties>
 
@@ -105,7 +105,7 @@
       <id>Indigo</id>
       <name>Eclipse Indigo p2 repository</name>
       <layout>p2</layout>
-      <url>${repo.indigo}</url>
+      <url>${repo.juno}</url>
       <snapshots><enabled>false</enabled></snapshots>
     </repository>
     <repository>
