--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -88,6 +88,12 @@
             class="scala.tools.eclipse.properties.ImplicitsPreferencePage"
             id="org.scala-ide.sdt.core.properties.Implicits"
             name="Implicits">
+      </page>
+      <page
+            category="org.scala-ide.sdt.core.preferences"
+            class="scala.tools.eclipse.logging.ui.properties.LoggingPreferencePage"
+            id="org.scala-ide.sdt.core.properties.Logging"
+            name="Logging">
       </page>      
    </extension>
 
@@ -744,6 +750,9 @@
      </initializer>
      <initializer
            class="scala.tools.eclipse.properties.ImplicitsPagePreferenceInitializer">
+     </initializer>
+     <initializer
+           class="scala.tools.eclipse.logging.ui.properties.LoggingPreferencePageInitializer">
      </initializer>
   </extension>
 
