--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -75,14 +75,14 @@
 
       <repositories>
         <repository>
-          <id>scala-tools.org</id>
-          <name>Scala Tools Maven2 Repository</name>
-          <url>http://scala-tools.org/repo-releases</url>
+          <id>sonatype.releases</id>
+          <name>Replacement for Scala Tools Maven2 Repository</name>
+          <url>https://oss.sonatype.org/content/repositories/releases/</url>
         </repository>
         <repository>
-          <id>scala-tools.snapshot</id>
-          <name>Scala Tools maven snapshot repository</name>
-          <url>http://scala-tools.org/repo-snapshots</url>
+          <id>sonatype.snapshot</id>
+          <name>Replacement for Scala Tools maven snapshot repository</name>
+          <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
           <snapshots>
             <updatePolicy>daily</updatePolicy>
           </snapshots>
