--- a/org.scala-ide.sdt.aspects/plugin.xml
+++ b/org.scala-ide.sdt.aspects/plugin.xml
@@ -8,4 +8,5 @@
    <extension-point id="method_verifier" name="Method Verifier" schema="methodVerifier.exsd"/>
    <extension-point id="cuprovider" name="Compilation Unit Provider" schema="cuprovider.exsd"/>
    <extension-point id="imagedescriptorselector" name="Image Descriptor Selector" schema="imagedescriptorselector.exsd"/>
+   <extension-point id="openactionprovider" name="Open Action Provider" schema="openactionprovider.exsd"/>
 </plugin>
